@@ -1,29 +1,5 @@
 package org.violetmoon.quark.addons.oddities.module;
 
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.color.item.ItemColor;
-import net.minecraft.client.gui.screens.MenuScreens;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.gui.screens.inventory.InventoryScreen;
-import net.minecraft.client.renderer.item.ItemProperties;
-import net.minecraft.core.cauldron.CauldronInteraction;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.ItemTags;
-import net.minecraft.tags.TagKey;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.EntityType;
-import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.item.ItemEntity;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.inventory.MenuType;
-import net.minecraft.world.item.*;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.SoundType;
-import net.minecraft.world.level.block.state.properties.NoteBlockInstrument;
-import net.minecraftforge.common.extensions.IForgeMenuType;
-
 import org.violetmoon.quark.addons.oddities.client.screen.BackpackInventoryScreen;
 import org.violetmoon.quark.addons.oddities.inventory.BackpackMenu;
 import org.violetmoon.quark.addons.oddities.item.BackpackItem;
@@ -42,10 +18,46 @@ import org.violetmoon.zeta.event.bus.PlayEvent;
 import org.violetmoon.zeta.event.load.ZCommonSetup;
 import org.violetmoon.zeta.event.load.ZRegister;
 import org.violetmoon.zeta.event.play.entity.living.ZLivingDrops;
+import org.violetmoon.zeta.event.play.entity.player.ZPlayerInteract;
 import org.violetmoon.zeta.item.ZetaItem;
 import org.violetmoon.zeta.module.ZetaLoadModule;
 import org.violetmoon.zeta.module.ZetaModule;
 import org.violetmoon.zeta.util.Hint;
+
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.color.item.ItemColor;
+import net.minecraft.client.gui.screens.MenuScreens;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.gui.screens.inventory.InventoryScreen;
+import net.minecraft.client.renderer.item.ItemProperties;
+import net.minecraft.core.cauldron.CauldronInteraction;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.tags.ItemTags;
+import net.minecraft.tags.TagKey;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.decoration.ArmorStand;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.inventory.MenuType;
+import net.minecraft.world.item.CreativeModeTabs;
+import net.minecraft.world.item.DyeColor;
+import net.minecraft.world.item.DyeableArmorItem;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.item.Rarity;
+import net.minecraft.world.item.enchantment.Enchantments;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.SoundType;
+import net.minecraft.world.level.block.state.properties.NoteBlockInstrument;
+import net.minecraftforge.common.extensions.IForgeMenuType;
 
 @ZetaLoadModule(category = "oddities")
 public class BackpackModule extends ZetaModule {
@@ -63,6 +75,9 @@ public class BackpackModule extends ZetaModule {
 	public static int baseRavagerHideDrop = 1;
 	@Config
 	public static double extraChancePerLooting = 0.5;
+	
+	@Config
+	public static boolean allowArmorStandUnloading = true;
 
 	@Hint
 	public static Item backpack;
@@ -115,6 +130,34 @@ public class BackpackModule extends ZetaModule {
 				amount++;
 
 			event.getDrops().add(new ItemEntity(entity.level(), entity.getX(), entity.getY(), entity.getZ(), new ItemStack(ravager_hide, amount)));
+		}
+	}
+	
+	@PlayEvent
+	public void onArmorStandInteract(ZPlayerInteract.EntityInteractSpecific event) {
+		Entity target = event.getTarget();
+		if(allowArmorStandUnloading && target instanceof ArmorStand as && event.getHand() == InteractionHand.MAIN_HAND && !event.getLevel().isClientSide) {
+			Player player = event.getEntity();
+
+			if(player.isCrouching() || !player.getMainHandItem().isEmpty() || !player.getOffhandItem().isEmpty())
+				return;
+			
+			ItemStack playerChest = player.getItemBySlot(EquipmentSlot.CHEST);
+			ItemStack armorStandChest = as.getItemBySlot(EquipmentSlot.CHEST);
+
+			if(playerChest.is(backpack) || armorStandChest.is(backpack)) {
+				ItemStack playerCopy = playerChest.copy();
+				ItemStack armorStandCopy = armorStandChest.copy();
+				
+				as.setItemSlot(EquipmentSlot.CHEST, playerCopy);
+				player.setItemSlot(EquipmentSlot.CHEST, armorStandCopy);
+				
+				player.swing(InteractionHand.MAIN_HAND);
+				player.playSound(SoundEvents.ARMOR_EQUIP_LEATHER);
+				
+				event.setCanceled(true);
+				event.setCancellationResult(InteractionResult.SUCCESS);
+			}
 		}
 	}
 
