@@ -8,7 +8,7 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 
-public interface ZEntityInteract extends IZetaPlayEvent {
+public interface ZEntityInteract extends IZetaPlayEvent  {
 	Entity getTarget();
 	Player getEntity();
 	Level getLevel();
